--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
   },
   "plugins": ["react", "import"],
   "rules": {
-    "import/no-default-export": "error"
+    "import/no-default-export": "error",
+    "react/prop-types": [2, { "ignore": ["children"] }]
   }
 }
