--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "mobx": "^6.3.2",
+    "mobx-persist-store": "^1.0.3",
     "mobx-react-lite": "^3.2.0",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
