--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mobx": "^6.3.2",
     "mobx-persist-store": "^1.0.3",
     "mobx-react-lite": "^3.2.0",
+    "mobx-remotedev": "^0.3.6",
     "random-words": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
